{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 38,
  "lineage": "5125838f-953b-5792-18f3-2b2316b08d66",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chat_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:internet-gateway/igw-07aa240203495e4fa",
            "id": "igw-07aa240203495e4fa",
            "owner_id": "046354001990",
            "tags": {
              "Name": "chat-vpc-ig"
            },
            "tags_all": {
              "Name": "chat-vpc-ig"
            },
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "chat_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:loadbalancer/app/chat-alb/68a23a67ab660eb0",
            "arn_suffix": "app/chat-alb/68a23a67ab660eb0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "chat-alb-1535481536.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:loadbalancer/app/chat-alb/68a23a67ab660eb0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chat-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05f77895fb9d68492"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0360afe5c68c64639"
              },
              {
                "subnet_id": "subnet-079b3374038247ae5"
              }
            ],
            "subnets": [
              "subnet-0360afe5c68c64639",
              "subnet-079b3374038247ae5"
            ],
            "vpc_id": "vpc-088bd122d40a9649a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.chat_alb_sg",
            "aws_subnet.chat_public_subnet_a",
            "aws_subnet.chat_public_subnet_b",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chat_alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:listener/app/chat-alb/68a23a67ab660eb0/a5fbeb58c4d4dd00",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:listener/app/chat-alb/68a23a67ab660eb0/a5fbeb58c4d4dd00",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:loadbalancer/app/chat-alb/68a23a67ab660eb0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.chat_alb",
            "aws_security_group.chat_alb_sg",
            "aws_subnet.chat_public_subnet_a",
            "aws_subnet.chat_public_subnet_b",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "chat_alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:listener/app/chat-alb/68a23a67ab660eb0/cb47e562ac11fa50",
            "certificate_arn": "arn:aws:acm:eu-central-1:046354001990:certificate/79696e85-dc45-4509-8f87-7cec070be27f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:targetgroup/chat-lb-tg/afde656c95dba174",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:listener/app/chat-alb/68a23a67ab660eb0/cb47e562ac11fa50",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:loadbalancer/app/chat-alb/68a23a67ab660eb0",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.chat_cirtificate",
            "aws_lb.chat_alb",
            "aws_lb_target_group.chat_lb_target_group",
            "aws_security_group.chat_alb_sg",
            "aws_subnet.chat_public_subnet_a",
            "aws_subnet.chat_public_subnet_b",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "chat_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:targetgroup/chat-lb-tg/afde656c95dba174",
            "arn_suffix": "targetgroup/chat-lb-tg/afde656c95dba174",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:046354001990:targetgroup/chat-lb-tg/afde656c95dba174",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "chat-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chat_private_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:route-table/rtb-0c655ab6afe1a6a77",
            "id": "rtb-0c655ab6afe1a6a77",
            "owner_id": "046354001990",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "chat-private-subnets-route-table"
            },
            "tags_all": {
              "Name": "chat-private-subnets-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chat_public_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:route-table/rtb-0232cf66bb7a4b817",
            "id": "rtb-0232cf66bb7a4b817",
            "owner_id": "046354001990",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07aa240203495e4fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chat-public-subnets-route-table"
            },
            "tags_all": {
              "Name": "chat-public-subnets-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.chat_internet_gateway",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chat_private_subnet_a_route_table_assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093f355fc2d4204d9",
            "route_table_id": "rtb-0c655ab6afe1a6a77",
            "subnet_id": "subnet-0033cc8a626dfd9e0"
          },
          "dependencies": [
            "aws_route_table.chat_private_subnets_route_table",
            "aws_subnet.chat_private_subnet_a",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chat_private_subnet_b_route_table_assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fda06b1aa70c792c",
            "route_table_id": "rtb-0c655ab6afe1a6a77",
            "subnet_id": "subnet-01583610f392d8321"
          },
          "dependencies": [
            "aws_route_table.chat_private_subnets_route_table",
            "aws_subnet.chat_private_subnet_b",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chat_public_subnet_a_route_table_assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055f8a8ee7650cf6e",
            "route_table_id": "rtb-0232cf66bb7a4b817",
            "subnet_id": "subnet-0360afe5c68c64639"
          },
          "dependencies": [
            "aws_internet_gateway.chat_internet_gateway",
            "aws_route_table.chat_public_subnets_route_table",
            "aws_subnet.chat_public_subnet_a",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chat_public_subnet_b_route_table_assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c858c00f35f0d3b0",
            "route_table_id": "rtb-0232cf66bb7a4b817",
            "subnet_id": "subnet-079b3374038247ae5"
          },
          "dependencies": [
            "aws_internet_gateway.chat_internet_gateway",
            "aws_route_table.chat_public_subnets_route_table",
            "aws_subnet.chat_public_subnet_b",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chat_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:security-group/sg-05f77895fb9d68492",
            "description": "Allow HTTP \u0026 HTTPS traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f77895fb9d68492",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chat-alb-sg",
            "name_prefix": "",
            "owner_id": "046354001990",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chat_asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:security-group/sg-0253ea0fe96edce74",
            "description": "Allow HTTP traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0253ea0fe96edce74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "chat-asg-sg",
            "name_prefix": "",
            "owner_id": "046354001990",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chat_vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:security-group/sg-0afa308ac91ee6215",
            "description": "Allow inbound traffic from EC2 instances security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afa308ac91ee6215",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "chat-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "046354001990",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chat_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:subnet/subnet-0033cc8a626dfd9e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0033cc8a626dfd9e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046354001990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chat-private-subnet-a"
            },
            "tags_all": {
              "Name": "chat-private-subnet-a"
            },
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chat_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:subnet/subnet-01583610f392d8321",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01583610f392d8321",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046354001990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chat-private-subnet-b"
            },
            "tags_all": {
              "Name": "chat-private-subnet-b"
            },
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chat_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:subnet/subnet-0360afe5c68c64639",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0360afe5c68c64639",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046354001990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chat-public-subnet-a"
            },
            "tags_all": {
              "Name": "chat-public-subnet-a"
            },
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chat_public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:subnet/subnet-079b3374038247ae5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079b3374038247ae5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "046354001990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chat-public-subnet-b"
            },
            "tags_all": {
              "Name": "chat-public-subnet-b"
            },
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chat_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:vpc/vpc-088bd122d40a9649a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076b9e41b03a094cd",
            "default_route_table_id": "rtb-07f01268b89b0700c",
            "default_security_group_id": "sg-0d59b7c7697a65411",
            "dhcp_options_id": "dopt-02deb9ba3bd275f87",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088bd122d40a9649a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f01268b89b0700c",
            "owner_id": "046354001990",
            "tags": {
              "Name": "chat-vpc"
            },
            "tags_all": {
              "Name": "chat-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:vpc-endpoint/vpce-0043a0dc9a008d065",
            "dns_entry": [
              {
                "dns_name": "vpce-0043a0dc9a008d065-a4tcr3ra.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0043a0dc9a008d065-a4tcr3ra-eu-central-1a.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0043a0dc9a008d065-a4tcr3ra-eu-central-1b.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "api.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z04416482GPWI877U49FX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0043a0dc9a008d065",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d0dfd291b5f67769",
              "eni-0f5ab216115fa94a2"
            ],
            "owner_id": "046354001990",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0afa308ac91ee6215"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0033cc8a626dfd9e0",
              "subnet-01583610f392d8321"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_security_group.chat_vpc_endpoint_sg",
            "aws_subnet.chat_private_subnet_a",
            "aws_subnet.chat_private_subnet_b",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:vpc-endpoint/vpce-026fd61f312f50e25",
            "dns_entry": [
              {
                "dns_name": "vpce-026fd61f312f50e25-8hlbeh7h.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-026fd61f312f50e25-8hlbeh7h-eu-central-1b.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-026fd61f312f50e25-8hlbeh7h-eu-central-1a.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z04407543JXI7RZ2FQQBK"
              },
              {
                "dns_name": "*.dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z04407543JXI7RZ2FQQBK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-026fd61f312f50e25",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d6d9200d214da39a",
              "eni-0f81799d0c1c7236b"
            ],
            "owner_id": "046354001990",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0afa308ac91ee6215"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0033cc8a626dfd9e0",
              "subnet-01583610f392d8321"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_security_group.chat_vpc_endpoint_sg",
            "aws_subnet.chat_private_subnet_a",
            "aws_subnet.chat_private_subnet_b",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:046354001990:vpc-endpoint/vpce-042d6b911acc03a87",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "id": "vpce-042d6b911acc03a87",
            "owner_id": "046354001990",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c655ab6afe1a6a77"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-088bd122d40a9649a"
          },
          "dependencies": [
            "aws_route_table.chat_private_subnets_route_table",
            "aws_vpc.chat_vpc"
          ]
        }
      ]
    }
  ]
}